--- a/prehtml/tonc.css
+++ b/prehtml/tonc.css
@@ -65,8 +65,6 @@ tt		{ color: #400080; }
 dfn		{ font-style:italic; font-weight:bold; }
 em		{ font-weight:bold; font-style:normal; color:purple; }
 
-caption	{ font-size: 80%; text-align:left; margin-left: 1em; }
-
 /* === lists === */
 dd		{ margin-left: 1em; margin-bottom: 0.3em; }
 dt		{ font-weight:bold; font-size: 114%; }
@@ -74,14 +72,14 @@ dt.spec	{ color:blue; }
 
 /* since MSIE screws up list padding, have to set margins AND padding */
 ul, ol	{ margin: 0.4em 0.5em; padding: 0 1.5em 0; }
-li.fix  { list-style-image:url(../img/main/bul_excl.png); }
+li.fix	{ list-style-image:url(../img/main/bul_excl.png); }
 li.new	{ list-style-image:url(../img/main/bul_new.png);  }
 li.swap	{ list-style-image:url(../img/main/bul_swap.png); }
 li.upgr	{ list-style-image:url(../img/main/bul_upgr.png); }
 
 /* === divisions === */
 .sm		{ margin-top: 0; margin-bottom: 0; }
-.mini   { font-size: 85%;	}
+.mini	{ font-size: 85%;	}
 .keyw	{ color: #0000D0;	}
 .cmt	{ color: #007000;	}
 .str	{ color: #800080;	}
@@ -108,12 +106,12 @@ div.nhgood	{ color:green;		}
 div.nhbad	{ color:red;		}
 div.nhcare	{ color: #C06000;	}
 
-
 div.endtag	{ text-align:right; font-size: 70%;	}
 
 /* --- picture+caption frames --- */
 div.cpt, div.cpt_fl, div.cpt_fr {
-	margin: .5em;		padding: 4px;
+	margin: .5em;
+	padding: 4px;
 	border: black 1px solid; 
 	font-size: 80%; 
 	page-break-inside: avoid;
@@ -132,12 +130,12 @@ td div.cpt, td div.dpt_fl, td div.cpt_fr {
 
 div.reg			{	margin: 8px auto;	text-align:center;	width: 90%;	}
 div.reg table	{	margin: 1px auto;	text-align:left;	}
-div.reg caption	{	margin: 0px auto;	text-align:left;	}
+div.reg caption	{	margin: 1px auto;	text-align:left;	}
 
 div.cblock			{	margin: 6px auto;	text-align:center;	}
 div.cblock div		{	margin: 2px auto;	text-align:left;	}
 div.cblock table	{	margin: 2px auto;	text-align:left;	}
-div.cblock caption	{	margin: 0px auto;	text-align:left;	}
+div.cblock caption	{	margin: 1px auto;	text-align:left;	}
 
 div.lblock			{	margin: 6px 3em;	}
 div.lblock table	{	margin: 2px 0;		}
@@ -159,7 +157,31 @@ div.cblock div.cpt	{ margin: 0.5em auto; }
 
 /* === Table styles === */
 
+table {
+	border-spacing: 0;
+}
+
 td.fill, th.fill	{ width: 16px; }
+
+caption {
+	font-size: 80%;
+	text-align:left;
+	margin-left: 1em;
+	margin-top: 1px;
+	caption-side: bottom;
+}
+
+caption.top {
+	caption-side: top;
+	margin-top: 0;
+	margin-bottom: 1px;
+}
+
+caption.reg {
+	caption-side: top;
+	margin-top: 0;
+	margin-bottom: 1px;
+}
 
 /* --- reg table --- */
 table.reg {
@@ -168,7 +190,6 @@ table.reg {
 	border: solid #C0C0C0 1px;
 	page-break-inside: avoid;
 }
-caption.reg			{ caption-side:top; }
 
 tr.bits, tr.bf, col.bits, col.bf, col.def { text-align:center; }
 
@@ -224,6 +245,10 @@ td.hdr_r	{ width: 40%; text-align:right;	}
 /* (Table) border styles */
 .bdr
 { border: 1px black solid;		}
+.bdrT, .bdrTL, .bdrTR, 
+.bdrLL, .bdrRR,
+.bdrB, .bdrBL, .bdrBR { padding: 0; }
+
 .bdrT, .bdrTL, .bdrTR, .bdrLL, .bdrRR
 { border-top: 1px black solid;		}
 .bdrL, .bdrTL, .bdrBL, .bdrLL
