--- a/text/tonc.css
+++ b/text/tonc.css
@@ -5,12 +5,19 @@ body
 {
 	background: url(../img/main/tonc_bg.png) #D0F0F0; 
 	color: #000000;
-	max-width: 800px;
-	margin: 0 auto;
+	margin: 0;
 }
 
 body, table {
-	font: 13px tahoma, verdana, sans-serif;
+	font-family: tahoma, verdana, sans-serif;
+	font-size: 16px;
+	line-height: 1.3;
+}
+
+.main-container {
+	max-width: 860px;
+	margin: 0 auto;
+	padding: 0 10px;
 }
 
 .page-break {
@@ -32,9 +39,9 @@ h2+h4	{ margin-top: 0.2em;		}
 h3+h4	{ margin-top: 0.2em;		}
 
 
-p		{ margin-top: 0.1em; margin-bottom: 0.1em;	}
-p+p		{ text-indent: 1.5em;	}
-p.ni	{ text-indent: 0;		}
+p		{ margin-top: 0.2em; margin-bottom: 0.2em; }
+p+p		{ text-indent: 1.2em; }
+p.ni	{ text-indent: 0; }
 
 
 sup { 
@@ -58,7 +65,11 @@ tt		{ color: #400080; }
 dfn		{ font-style:italic; font-weight:bold; }
 em		{ font-weight:bold; font-style:normal; color:purple; }
 
-caption	{ font-size: 80%; text-align:left; margin-left: 1em; }
+.nowrap { white-space: nowrap; }
+.align-l { text-align: left; }
+.align-c { text-align: center; }
+.align-r { text-align: right; }
+
 
 /* === lists === */
 dd		{ margin-left: 1em; margin-bottom: 0.3em; }
@@ -67,14 +78,14 @@ dt.spec	{ color:blue; }
 
 /* since MSIE screws up list padding, have to set margins AND padding */
 ul, ol	{ margin: 0.4em 0.5em; padding: 0 1.5em 0; }
-li.fix  { list-style-image:url(../img/main/bul_excl.png); }
+li.fix	{ list-style-image:url(../img/main/bul_excl.png); }
 li.new	{ list-style-image:url(../img/main/bul_new.png);  }
 li.swap	{ list-style-image:url(../img/main/bul_swap.png); }
 li.upgr	{ list-style-image:url(../img/main/bul_upgr.png); }
 
 /* === divisions === */
 .sm		{ margin-top: 0; margin-bottom: 0; }
-.mini   { font-size: 85%;	}
+.mini	{ font-size: 85%;	}
 .keyw	{ color: #0000D0;	}
 .cmt	{ color: #007000;	}
 .str	{ color: #800080;	}
@@ -101,12 +112,12 @@ div.nhgood	{ color:green;		}
 div.nhbad	{ color:red;		}
 div.nhcare	{ color: #C06000;	}
 
-
 div.endtag	{ text-align:right; font-size: 70%;	}
 
 /* --- picture+caption frames --- */
 div.cpt, div.cpt_fl, div.cpt_fr {
-	margin: .5em;		padding: 4px;
+	margin: .5em;
+	padding: 4px;
 	border: black 1px solid; 
 	font-size: 80%; 
 	page-break-inside: avoid;
@@ -125,12 +136,12 @@ td div.cpt, td div.dpt_fl, td div.cpt_fr {
 
 div.reg			{	margin: 8px auto;	text-align:center;	width: 90%;	}
 div.reg table	{	margin: 1px auto;	text-align:left;	}
-div.reg caption	{	margin: 0px auto;	text-align:left;	}
+div.reg caption	{	margin: 1px auto;	text-align:left; padding-left: 4px;	}
 
-div.cblock			{	margin: 6px auto;	text-align:center;	}
-div.cblock div		{	margin: 2px auto;	text-align:left;	}
-div.cblock table	{	margin: 2px auto;	text-align:left;	}
-div.cblock caption	{	margin: 0px auto;	text-align:left;	}
+div.cblock			{	margin: 6px auto;	text-align: center;	}
+div.cblock div		{	margin: 2px auto;	text-align: left;	}
+div.cblock table	{	margin: 2px auto;	text-align: left;	}
+div.cblock caption	{	margin: 1px auto;	text-align: left;	}
 
 div.lblock			{	margin: 6px 3em;	}
 div.lblock table	{	margin: 2px 0;		}
@@ -146,39 +157,163 @@ div.cblock div.cpt	{ margin: 0.5em auto; }
 	background: #E0E0E0;
 	border-radius: 4px;
 	box-shadow: 2px 2px 4px #C0C0C0;
-	font: 500 90% "Courier New", monospace; 
+	font: 500 90% monospace; 
 }
 
 
 /* === Table styles === */
 
+table {
+	border-spacing: 0;
+	th, td { padding: 2px 4px; }
+}
+
+table.cp-1 { th, td { padding: 1px !important; } }
+table.cp-4 { th, td { padding: 4px !important; } }
+table.cp-8 { th, td { padding: 8px !important; } }
+
+/* border=1 equivalent */
+table.border-std {
+	border: 1px outset;
+	>tbody>tr { >th, >td { border: 1px inset; } }
+}
+
+table.frame-group {
+	border-spacing: 4px;
+	th, td { vertical-align: top; }
+}
+
+table.eq-container {
+}
+
+table.controls-container {
+	th, td {
+		padding: 2px;
+		vertical-align: top;
+		text-align: left;
+	}
+	th:nth-child(1), td:nth-child(1) {
+		text-align: left;
+		white-space: nowrap;
+	}
+}
+
 td.fill, th.fill	{ width: 16px; }
 
+caption {
+	font-size: 80%;
+	text-align: left;
+	
+	caption-side: bottom;
+	margin-left: 1em;
+	margin-top: 1px;
+}
+
+caption.top {
+	caption-side: top;
+	margin-top: 0;
+	margin-bottom: 1px;
+}
+
+caption.reg {
+	caption-side: top;
+	margin-top: 0;
+	margin-bottom: 1px;
+}
+
+/* Sigh. Since there's no way to style things by column anymore, I have to resort to this stuff  -_- */
+/* left-align */
+table.c1-l { td:nth-child(1) { text-align: left; } }
+table.c2-l { td:nth-child(2) { text-align: left; } }
+table.c3-l { td:nth-child(3) { text-align: left; } }
+table.c4-l { td:nth-child(4) { text-align: left; } }
+table.c5-l { td:nth-child(5) { text-align: left; } }
+table.c6-l { td:nth-child(6) { text-align: left; } }
+table.c7-l { td:nth-child(7) { text-align: left; } }
+table.c8-l { td:nth-child(8) { text-align: left; } }
+
+/* center align */
+table.c1-c { td:nth-child(1) { text-align: center; } }
+table.c2-c { td:nth-child(2) { text-align: center; } }
+table.c3-c { td:nth-child(3) { text-align: center; } }
+table.c4-c { td:nth-child(4) { text-align: center; } }
+table.c5-c { td:nth-child(5) { text-align: center; } }
+table.c6-c { td:nth-child(6) { text-align: center; } }
+table.c7-c { td:nth-child(7) { text-align: center; } }
+table.c8-c { td:nth-child(8) { text-align: center; } }
+
+/* right-align */
+table.c1-r { td:nth-child(1) { text-align: right; } }
+table.c2-r { td:nth-child(2) { text-align: right; } }
+table.c3-r { td:nth-child(3) { text-align: right; } }
+table.c4-r { td:nth-child(4) { text-align: right; } }
+table.c5-r { td:nth-child(5) { text-align: right; } }
+table.c6-r { td:nth-child(6) { text-align: right; } }
+table.c7-r { td:nth-child(7) { text-align: right; } }
+table.c8-r { td:nth-child(8) { text-align: right; } }
+
+
 /* --- reg table --- */
-table.reg {
-	font: 90% "Courier New", monospace;
+
+table.reg, table.reg-like {
+	font: 90% monospace;
 	background: #E0E0E0; 
 	border: solid #C0C0C0 1px;
 	page-break-inside: avoid;
+
+	td {
+		padding: 4px;
+	}
 }
-caption.reg			{ caption-side:top; }
+
+table.reg-desc {
+	border-spacing: 2px;
+	th, td {
+		padding-inline: 4px;
+		vertical-align: top;
+	}
+
+	/* bits */
+	td:nth-child(1) {
+		width: 40px;
+		font: 90% monospace;
+		text-align: center;
+		padding-top: 0.4em;	/* to keep baseline aligned */
+	}
+	/* name */
+	td:nth-child(2) {
+		width: 8%; 
+		font-weight: bold;
+	}
+	/* define */
+	td:nth-child(3) {
+		width: 12%;
+		font: 90% monospace;
+		padding-top: 0.4em;	/* to keep baseline aligned */
+	}
+
+	/* Last. Needed to 3-col tables. */
+	td:last-child {
+		width: auto;
+	}
+}
 
 tr.bits, tr.bf, col.bits, col.bf, col.def { text-align:center; }
 
 col.bits, col.bf, col.def {	vertical-align:top; 	}
-tr.bits, col.bits		{	font: 90% "Courier New";	}
+tr.bits, col.bits		{	font: 90% monospace;	}
 tr.bf, col.bf			{	font-weight:bold;			}
-col.def					{	font: 90% "Courier New";	}
+col.def					{	font: 90% monospace;	}
 
-tr.bg0, tr.bg1	
+tr.bg0, tr.bg1
 {
 	border: #C0C0C0 solid 2px;
 /*	opacity: 0.75; filter:alpha(opacity=0);	*/
 }
 tr.bg0		{	background-color: #E0E0E0;			}
-tr.bg1		{	background-color: #C0C0C0;			} 
-tr.bg0 td	{	border-bottom: #C0C0C0 1px solid;	} 
-tr.bg1 td	{	border-bottom: #E0E0E0 1px solid;	} 
+tr.bg1		{	background-color: #C0C0C0;			}
+tr.bg0 td	{	border-bottom: #C0C0C0 1px solid;	}
+tr.bg1 td	{	border-bottom: #E0E0E0 1px solid;	}
 
 
 /* read only, write only */
@@ -199,11 +334,24 @@ tr.bg1 td	{	border-bottom: #E0E0E0 1px solid;	}
 
 /* --- 'equation tables' --- */
 .eqtbl		{ font-size: 100%;	page-break-inside:avoid;		}
+
+/* basic A = B equation */
+.eqtbl.basic {
+	td:nth-child(1) { text-align: right; }
+	td:nth-child(2) { text-align: center; }
+	td:nth-child(3) { text-align: left; }
+}
+
+.eqtbl.matrix {
+	text-align: center;
+}
+
 .eqcell		{ padding: 0.5em 0;	font-size: 115%;					}
-.eqnrcell
-{
-	padding-right: 8px; min-width: 2.5em; 
-	text-align:left; font-weight:bold;
+.eqnrcell {
+	padding-right: 8px; 
+	min-width: 2.5em; 
+	text-align: left; 
+	font-weight:bold;
 }
 
 /* --- header/footer cells --- */
@@ -217,6 +365,10 @@ td.hdr_r	{ width: 40%; text-align:right;	}
 /* (Table) border styles */
 .bdr
 { border: 1px black solid;		}
+.bdrTL, .bdrTR, 
+.bdrLL, .bdrRR, 
+.bdrBL, .bdrBR { padding: 0; }
+
 .bdrT, .bdrTL, .bdrTR, .bdrLL, .bdrRR
 { border-top: 1px black solid;		}
 .bdrL, .bdrTL, .bdrBL, .bdrLL
@@ -225,6 +377,35 @@ td.hdr_r	{ width: 40%; text-align:right;	}
 { border-right: 1px black solid;		}
 .bdrB, .bdrBL, .bdrBR, .bdrLL, .bdrRR
 { border-bottom: 1px black solid;	}
+
+/* ------------------------------------------------------------------------------------------
+	BANNERS
+   ------------------------------------------------------------------------------------------ */
+
+.banner-deprecation {
+	/*
+	position: fixed; 
+	width: 100%;
+	*/
+	background: rgba(192,128,0,0.5);
+	padding: 0.3rem 2rem;
+}
+
+/* Useful to make position:fixed work. */
+/*
+.main-scroll {
+  position: absolute;
+  top: 2.5em;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  overflow-y: auto;
+}
+*/
+
+/* ------------------------------------------------------------------------------------------
+	MEDIA
+   ------------------------------------------------------------------------------------------ */
 
 
 @media print {
